# TFM-KG

./: .env.example  AGENTS.md  IMPLEMENT.md  README.md  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  dependencies.py  deps.py  main.py
apps/api/routers/: health.py  kg.py  query.py
apps/api/schemas/: query.py
data/: example.ttl
docs/: amsterdam_museum_kg_guide.md  mcp-claude-setup.md  mcp-vscode-setup.md
eval/question_sets/: trap_questions.jsonl
logs/: mcp_tool_calls.jsonl
mcp_kg_server/: __init__.py  server.py  settings.py  telemetry.py
mcp_kg_server/prompts/: __init__.py  kg_query_assistant.py
mcp_kg_server/tools/: __init__.py  entity_facts.py  entity_search.py  ping.py  schema_summary.py  sparql_query.py
migrations/: 001_init_pgvector.sql
src/tfmkg/: __init__.py
src/tfmkg/adapters/db/: __init__.py  psycopg_client.py
src/tfmkg/adapters/embeddings/: __init__.py  ollama_embeddings.py  openai_embeddings.py
src/tfmkg/adapters/llm/: __init__.py  ollama_chat.py  openai_responses.py
src/tfmkg/adapters/telemetry/: __init__.py  postgres.py
src/tfmkg/core/: config.py  evidence.py
src/tfmkg/scripts/: index_kg.py
tests/: test_evidence_pack.py  test_health_db.py  test_index_kg.py  test_index_stats.py  test_kg_ping.py  test_mcp_entity_facts.py  test_mcp_entity_search.py  test_mcp_prompts.py  test_mcp_schema_summary.py  test_mcp_sparql_query.py  test_mcp_tool_telemetry.py  test_mcp_vscode_setup.py  test_pgvector_repository.py  test_provider_selection.py  test_query_abstention_integration.py  test_query_modes.py  test_query_telemetry.py
(+7 files in other folders)
