[project]
name = "tfmkg"
version = "0.1.0"
description = "TFM Knowledge Graph + RAG prototype"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "psycopg[binary]>=3.1",
  "jinja2>=3.1",
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.uvicorn]
factory = false
